[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dao-simulator"
version = "0.1.0"
description = "Private DAO simulation"
dependencies = [
    "Mesa==3.2.0",
    "pandas==2.3.0",
    "numpy==2.2.6",
    "networkx==3.5",
    "tqdm==4.67.1",
    "matplotlib==3.10.3",
    "pycountry==24.6.1",
    "seaborn==0.13.2",
    "geopandas==1.1.0",
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "watchdog==6.0.0",
    "httpx==0.28.1",
    "Jinja2==3.1.4",
]
requires-python = ">=3.10"
license = {text = "All rights reserved"}

[project.scripts]
dao-sim = "cli:main"
